--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -38,9 +38,15 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Source\Entities\Entity.cs" />
+    <Compile Include="Source\Level\Level.cs" />
+    <Compile Include="Source\Level\Tile.cs" />
+    <Compile Include="Source\Loop.cs" />
+    <Compile Include="Source\MonoInit.cs" />
+    <Compile Include="Source\Renderer\Spritesheet.cs" />
+    <Compile Include="Source\Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\UI\UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -55,6 +61,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
