Implement TileFactory. Add some methods for ProcessWalls in Level.cs

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Source\Enumerations\GameState.cs" />
     <Compile Include="Source\Enumerations\ItemType.cs" />
     <Compile Include="Source\Enumerations\State.cs" />
+    <Compile Include="Source\Enumerations\TileType.cs" />
     <Compile Include="Source\Input.cs" />
     <Compile Include="Source\Interfaces\IRenderable.cs" />
     <Compile Include="Source\Level\Level.cs" />
