rudimentary player controls

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Source\Enumerations\ItemType.cs" />
     <Compile Include="Source\Enumerations\State.cs" />
     <Compile Include="Source\Enumerations\TileType.cs" />
+    <Compile Include="Source\Enumerations\UserInput.cs" />
     <Compile Include="Source\Factories\TileFactory.cs" />
     <Compile Include="Source\Input.cs" />
     <Compile Include="Source\Interfaces\IMovable.cs" />
