--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Source\Interfaces\IRenderable.cs" />
     <Compile Include="Source\World\Level.cs" />
     <Compile Include="Source\World\LevelMaker.cs" />
+    <Compile Include="Source\World\Physics.cs" />
     <Compile Include="Source\World\Tile.cs" />
     <Compile Include="Source\Loop.cs" />
     <Compile Include="Source\MonoInit.cs" />
