resolved LevelMaker issues

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -56,9 +56,12 @@
     <Compile Include="Source\Input.cs" />
     <Compile Include="Source\Interfaces\IMovable.cs" />
     <Compile Include="Source\Interfaces\IRenderable.cs" />
+    <Compile Include="Source\World\Hallway.cs" />
     <Compile Include="Source\World\Level.cs" />
     <Compile Include="Source\World\LevelMaker.cs" />
+    <Compile Include="Source\World\Partition.cs" />
     <Compile Include="Source\World\Physics.cs" />
+    <Compile Include="Source\World\Room.cs" />
     <Compile Include="Source\World\Tile.cs" />
     <Compile Include="Source\Loop.cs" />
     <Compile Include="Source\MonoInit.cs" />
