--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Source\Entities\Item.cs" />
     <Compile Include="Source\Entities\Model.cs" />
     <Compile Include="Source\Entities\Player.cs" />
+    <Compile Include="Source\Entities\Projectile.cs" />
     <Compile Include="Source\Enumerations\ActionAI.cs" />
     <Compile Include="Source\Enumerations\AttackType.cs" />
     <Compile Include="Source\Enumerations\EnemyRank.cs" />
