--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -49,21 +49,26 @@
     <Compile Include="Source\Entities\Projectile.cs" />
     <Compile Include="Source\Enumerations\ActionAI.cs" />
     <Compile Include="Source\Enumerations\AttackType.cs" />
+    <Compile Include="Source\Enumerations\CollisionResponse.cs" />
     <Compile Include="Source\Enumerations\EnemyRank.cs" />
     <Compile Include="Source\Enumerations\EnemyType.cs" />
     <Compile Include="Source\Enumerations\GameState.cs" />
     <Compile Include="Source\Enumerations\ItemType.cs" />
     <Compile Include="Source\Enumerations\ProjectileType.cs" />
+    <Compile Include="Source\Enumerations\Shape.cs" />
     <Compile Include="Source\Enumerations\State.cs" />
     <Compile Include="Source\Enumerations\TileType.cs" />
     <Compile Include="Source\Enumerations\UserInput.cs" />
     <Compile Include="Source\Events\ProjectileEventArgs.cs" />
     <Compile Include="Source\Factories\EnemyFactory.cs" />
+    <Compile Include="Source\Factories\PhysicsBodyFactory.cs" />
     <Compile Include="Source\Factories\ProjectileFactory.cs" />
     <Compile Include="Source\Factories\TileFactory.cs" />
     <Compile Include="Source\Input.cs" />
+    <Compile Include="Source\Interfaces\ICollidable.cs" />
     <Compile Include="Source\Interfaces\IControlable.cs" />
     <Compile Include="Source\Interfaces\IMovable.cs" />
+    <Compile Include="Source\Interfaces\IPhysicsBody.cs" />
     <Compile Include="Source\Interfaces\IRenderable.cs" />
     <Compile Include="Source\Sound\AudioManager.cs" />
     <Compile Include="Source\UI\MainMenu.cs" />
@@ -73,7 +78,10 @@
     <Compile Include="Source\World\LevelEditor.cs" />
     <Compile Include="Source\World\LevelMaker.cs" />
     <Compile Include="Source\World\Partition.cs" />
-    <Compile Include="Source\World\Physics.cs" />
+    <Compile Include="Source\World\Physics\Body.cs" />
+    <Compile Include="Source\World\Physics\MovableBody.cs" />
+    <Compile Include="Source\World\Physics\PhysicsEngine.cs" />
+    <Compile Include="Source\World\Physics\RigidBody.cs" />
     <Compile Include="Source\World\Room.cs" />
     <Compile Include="Source\World\Tile.cs" />
     <Compile Include="Source\Containers\GameContainer.cs" />
