Shifted some entity funcionality to interfaces

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Source\Enumerations\GameState.cs" />
     <Compile Include="Source\Enumerations\ItemType.cs" />
     <Compile Include="Source\Enumerations\ProjectileType.cs" />
+    <Compile Include="Source\Enumerations\RenderingMethod.cs" />
     <Compile Include="Source\Enumerations\Shape.cs" />
     <Compile Include="Source\Enumerations\State.cs" />
     <Compile Include="Source\Enumerations\TileType.cs" />
@@ -63,14 +64,23 @@
     <Compile Include="Source\Factories\EnemyFactory.cs" />
     <Compile Include="Source\Factories\PhysicsBodyFactory.cs" />
     <Compile Include="Source\Factories\ProjectileFactory.cs" />
+    <Compile Include="Source\Factories\RenderingStrategyFactory.cs" />
     <Compile Include="Source\Factories\TileFactory.cs" />
     <Compile Include="Source\Input.cs" />
+    <Compile Include="Source\Interfaces\ICharacter.cs" />
     <Compile Include="Source\Interfaces\ICollidable.cs" />
-    <Compile Include="Source\Interfaces\IControlable.cs" />
+    <Compile Include="Source\Interfaces\IControllable.cs" />
     <Compile Include="Source\Interfaces\IMovable.cs" />
     <Compile Include="Source\Interfaces\IPhysicsBody.cs" />
     <Compile Include="Source\Interfaces\IRenderable.cs" />
+    <Compile Include="Source\Interfaces\IRenderingStrategy.cs" />
+    <Compile Include="Source\Interfaces\IUpdatable.cs" />
     <Compile Include="Source\Sound\AudioManager.cs" />
+    <Compile Include="Source\Strategies\CharacterRenderer.cs" />
+    <Compile Include="Source\Strategies\ItemRenderer.cs" />
+    <Compile Include="Source\Strategies\ProjectileRenderer.cs" />
+    <Compile Include="Source\Strategies\RenderingStrategy.cs" />
+    <Compile Include="Source\Strategies\TileRenderer.cs" />
     <Compile Include="Source\UI\MainMenu.cs" />
     <Compile Include="Source\Handlers\EntityHandler.cs" />
     <Compile Include="Source\World\Hallway.cs" />
