Main Menu Items

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -40,6 +40,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Source\Containers\ButtonContainer.cs" />
     <Compile Include="Source\Entities\Character.cs" />
     <Compile Include="Source\Entities\Enemy.cs" />
     <Compile Include="Source\Entities\Entity.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Source\Enumerations\UserInput.cs" />
     <Compile Include="Source\Events\KilledEventArgs.cs" />
     <Compile Include="Source\Events\MeleeAttackEventArgs.cs" />
+    <Compile Include="Source\Events\MousePositionEventArgs.cs" />
     <Compile Include="Source\Events\ProjectileEventArgs.cs" />
     <Compile Include="Source\Factories\EnemyFactory.cs" />
     <Compile Include="Source\Factories\PhysicsBodyFactory.cs" />
@@ -90,7 +92,13 @@
     <Compile Include="Source\Strategies\ProjectileRenderer.cs" />
     <Compile Include="Source\Strategies\RenderingStrategy.cs" />
     <Compile Include="Source\Strategies\TileRenderer.cs" />
-    <Compile Include="Source\UI\MainMenu\Button.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\Button.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\ExitButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\LoadGameButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\LevelEditorButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\CreditsButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\SaveGameButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\NewGameButton.cs" />
     <Compile Include="Source\UI\MainMenu\MainMenu.cs" />
     <Compile Include="Source\Handlers\EntityHandler.cs" />
     <Compile Include="Source\World\Hallway.cs" />
