Save and load 0.9

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Source\Enumerations\UserInput.cs" />
     <Compile Include="Source\Events\KilledEventArgs.cs" />
     <Compile Include="Source\Events\MeleeAttackEventArgs.cs" />
+    <Compile Include="Source\Events\OnButtonClickEventArgs.cs" />
     <Compile Include="Source\Events\MousePositionEventArgs.cs" />
     <Compile Include="Source\Events\ProjectileEventArgs.cs" />
     <Compile Include="Source\Factories\EnemyFactory.cs" />
@@ -86,6 +87,9 @@
     <Compile Include="Source\Interfaces\IUpdatable.cs" />
     <Compile Include="Source\Interfaces\IZone.cs" />
     <Compile Include="Source\Interfaces\MainMenu\IButton.cs" />
+    <Compile Include="Source\SaveAndLoad\SaveData.cs" />
+    <Compile Include="Source\SaveAndLoad\SaveManager.cs" />
+    <Compile Include="Source\SaveAndLoad\StorageDeviceSaveManager.cs" />
     <Compile Include="Source\Sound\AudioManager.cs" />
     <Compile Include="Source\Strategies\CharacterRenderer.cs" />
     <Compile Include="Source\Strategies\ItemRenderer.cs" />
@@ -97,10 +101,13 @@
     <Compile Include="Source\UI\MainMenu\Buttons\LoadGameButton.cs" />
     <Compile Include="Source\UI\MainMenu\Buttons\LevelEditorButton.cs" />
     <Compile Include="Source\UI\MainMenu\Buttons\CreditsButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\BackButton.cs" />
     <Compile Include="Source\UI\MainMenu\Buttons\SaveGameButton.cs" />
     <Compile Include="Source\UI\MainMenu\Buttons\NewGameButton.cs" />
+    <Compile Include="Source\UI\MainMenu\Buttons\SaveSlotButton.cs" />
     <Compile Include="Source\UI\MainMenu\MainMenu.cs" />
     <Compile Include="Source\Handlers\EntityHandler.cs" />
+    <Compile Include="Source\UI\MainMenu\SaveGame\SaveGame.cs" />
     <Compile Include="Source\World\Hallway.cs" />
     <Compile Include="Source\World\Level.cs" />
     <Compile Include="Source\World\LevelEditor.cs" />
