Some name changes

--- a/GameOne/GameOne.csproj
+++ b/GameOne/GameOne.csproj
@@ -68,11 +68,11 @@
     <Compile Include="Source\Enumerations\State.cs" />
     <Compile Include="Source\Enumerations\TileType.cs" />
     <Compile Include="Source\Enumerations\UserInput.cs" />
-    <Compile Include="Source\Events\KilledEventArgs.cs" />
-    <Compile Include="Source\Events\MeleeAttackEventArgs.cs" />
-    <Compile Include="Source\Events\OnButtonClickEventArgs.cs" />
-    <Compile Include="Source\Events\MousePositionEventArgs.cs" />
-    <Compile Include="Source\Events\ProjectileEventArgs.cs" />
+    <Compile Include="Source\EventArgs\KilledEventArgs.cs" />
+    <Compile Include="Source\EventArgs\MeleeAttackEventArgs.cs" />
+    <Compile Include="Source\EventArgs\OnButtonClickEventArgs.cs" />
+    <Compile Include="Source\EventArgs\MousePositionEventArgs.cs" />
+    <Compile Include="Source\EventArgs\ProjectileEventArgs.cs" />
     <Compile Include="Source\Factories\EnemyFactory.cs" />
     <Compile Include="Source\Factories\PhysicsBodyFactory.cs" />
     <Compile Include="Source\Factories\ProjectileFactory.cs" />
@@ -149,9 +149,6 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
